samples/_failures_safe/1761221216_70af60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9c5dfbe2.c: In function ‘print_token’:
./samples/SAFE/__tmp_9c5dfbe2.c:178:19: error: missing terminating " character
  178 |         "NUMBER", "IDENT
      |                   ^~~~~~
./samples/SAFE/__tmp_9c5dfbe2.c:178:9: error: expected expression at end of input
  178 |         "NUMBER", "IDENT
      |         ^~~~~~~~
./samples/SAFE/__tmp_9c5dfbe2.c:178:9: error: expected declaration or statement at end of input
